--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-server.port=8095
+server.port=5432
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-spring.datasource.url=jdbc:postgresql://localhost/postgres
-spring.datasource.username=postgres
-spring.datasource.password=lepetoulet007
-spring.jpa.hibernate.ddl-auto=none
+spring.datasource.url=jdbc:postgresql://stampy.db.elephantsql.com:5432/bvyvxqfc
+spring.datasource.username=bvyvxqfc
+spring.datasource.password=Jzvo7XVbrxik_hO-9HKvTBFH7uUvrByH
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
