--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
-server.port=5432
+server.port=8092
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-spring.datasource.url=jdbc:postgresql://stampy.db.elephantsql.com:5432/bvyvxqfc
-spring.datasource.username=bvyvxqfc
-spring.datasource.password=Jzvo7XVbrxik_hO-9HKvTBFH7uUvrByH
+#spring.datasource.url=jdbc:postgresql://192.168.1.132:5432/postgres
+#spring.datasource.username=postgres
+#spring.datasource.password=pwd
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
